--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 version = "0.1"
-group = "com.example"
+group = "com"
 
 repositories {
     mavenCentral()
@@ -15,22 +15,34 @@ micronaut {
     runtime("netty")
     testRuntime("junit5")
     processing {
-        incremental(true)
-        annotations("com.example.*")
+        incremental(false)
+        annotations("com.*")
     }
 }
 
 dependencies {
+    implementation("io.micronaut:micronaut-inject")
     implementation("io.micronaut:micronaut-validation")
     implementation("io.micronaut:micronaut-runtime")
     implementation("javax.annotation:javax.annotation-api")
     implementation("io.micronaut:micronaut-http-client")
     runtimeOnly("ch.qos.logback:logback-classic")
+    
+    annotationProcessor("io.micronaut:micronaut-inject-java")
+    testAnnotationProcessor("io.micronaut:micronaut-inject-java")
+
+    compile("io.micronaut:micronaut-inject")
+    testCompile "io.micronaut.test:micronaut-test-junit5:1.2.2"
+    testCompile "org.mockito:mockito-junit-jupiter:2.22.0"
+    testRuntime "org.junit.jupiter:junit-jupiter-engine:5.1.0"
 }
 
-
 application {
-    mainClass.set("com.infrastructure.Application")
+    mainClass.set("com.infrastructure.webserver.Application")
+}
+
+test {
+    useJUnitPlatform()
 }
 
 java {
